Fixed some stylisting choices from feedback. Page now jumps to top of project page on load. About me is dropped down by default. Projects no longer a dropdown, can re-add when I add extra blocks to homepage. Fixed spelling errors

--- a/src/CSS/AppRoot.css
+++ b/src/CSS/AppRoot.css
@@ -170,6 +170,11 @@
   flex-direction: column;
 }
 
+.card-container .card-sizer-centerer a#pageJump {
+  position:relative;
+  bottom:5em
+}
+
 .card-container .card {
   width:100%;
   height:100%;
